--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
             <div class="media block-6 d-block text-center pt-md-4">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-hook"></span>
+            		<img src="./images/Kran.svg" alt="">
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Стройка</h3>
@@ -126,7 +126,7 @@
           <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
             <div class="media block-6 d-block text-center pt-md-4">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-skyline"></span>
+            		<img src="./images/Skyline.svg" alt="">
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Реновация зданий</h3>
@@ -137,7 +137,7 @@
           <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
             <div class="media block-6 d-block text-center pt-md-4">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-stairs"></span>
+            		<img src="./images/Stairs.svg" alt="">
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Покраска</h3>
@@ -148,7 +148,7 @@
           <div class="col-md-3 d-flex services align-self-stretch p-4 py-md-5 ftco-animate">
             <div class="media block-6 d-block text-center pt-md-4">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-home"></span>
+            		<img src="./images/home.svg" alt="">
               </div>
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Архитектурный дизайн</h3>
@@ -161,7 +161,7 @@
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
-	    					<span class="flaticon-engineer"></span>
+	    					<img src="./images/Engineer.svg" alt="">
 	    				</div>
 	    				<div class="text">
 	      				<h3>Эксперты &amp; Профессионалы </h3>
@@ -172,7 +172,7 @@
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
-	    					<span class="flaticon-engineer-1"></span>
+	    					<img src="./images/Engineer-1.svg" alt="">
 	    				</div>
 	    				<div class="text">
 	      				<h3>Высокое качество работы</h3>
@@ -183,7 +183,7 @@
     			<div class="col-md-12 col-lg-4 services-2 p-4 py-5 d-flex ftco-animate">
     				<div class="py-3 d-flex">
 	    				<div class="icon">
-	    					<span class="flaticon-engineer-2"></span>
+	    					<img src="./images/Engineer-2.svg" alt="">
 	    				</div>
 	    				<div class="text">
 	      				<h3>24/7 Тех Поддержка</h3>
