--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
 				        			<span class="fa fa-map-marker"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Адресс:</span> Санкт-Петербург, Невсккий проспект д. 18</p>
+					            <p><span>Адресс:</span> Санкт-Петербург, проспект  КИМа, 4б</p>
 					          </div>
 				          </div>
 								</div>
@@ -162,7 +162,7 @@
 				        			<span class="fa fa-globe"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Вебсайт</span> <a href="#"> LineKran.com</a></p>
+					            <p><span>Вебсайт</span> <a href="#"> LineKran.ru</a></p>
 					          </div>
 				          </div>
 								</div>
