--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 	    <div class="container">
 	    
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="fa fa-bars"></span> Меню
 	      </button>
 				<form action="#" class="searchform order-lg-last">
           <div class="form-group d-flex">
@@ -294,7 +293,6 @@
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Здание</span>
 	              	<h2><a href="work-single.html">Жилые многоэтажки</a></h2>
 	              </div>
               </div>
@@ -307,7 +305,6 @@
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-									<span>Здание</span>
 	              	<h2><a href="work-single.html">Котлован</a></h2>
 	              </div>
               </div>
@@ -320,7 +317,6 @@
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Здание</span>
 	              	<h2><a href="work-single.html">Мост</a></h2>
 	              </div>
               </div>
@@ -334,7 +330,6 @@
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Здание</span>
 	              	<h2><a href="work-single.html">Заводы</a></h2>
 	              </div>
               </div>
@@ -347,7 +342,6 @@
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Здание</span>
 	              	<h2><a href="work-single.html">Погрузка и вывоз грунта</a></h2>
 	              </div>
               </div>
@@ -360,7 +354,6 @@
 	    				</a>
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
-	              	<span>Здание</span>
 	              	<h2><a href="work-single.html">Внутренняя отделка</a></h2>
 	              </div>
               </div>
@@ -466,7 +459,7 @@
 						              <li><a href="#" class="py-1 d-block">Персонал</a></li>
 						              <li><a href="#" class="py-1 d-block">Команда</a></li>
 						              <li><a href="#" class="py-1 d-block">Карьера</a></li>
-						              <li><a href="#" class="py-1 d-block">Блог</a></li>
+						              <!--<li><a href="#" class="py-1 d-block">Блог</a></li>-->
 						            </ul>
 											</div>
 											<div class="col-md-4 mb-md-0 mb-4">
